--- a/.woodpecker/build_itchio.yml
+++ b/.woodpecker/build_itchio.yml
@@ -10,6 +10,11 @@ steps:
       - docker build -t ghcr.io/bigaston/itchci:latest itchci
       - docker push ghcr.io/bigaston/itchci:latest
 
+      # Codeberg
+      - docker login -u $DOCKER_CODEBERG_USERNAME -p $DOCKER_CODEBERG_PASSWORD codeberg.org
+      - docker image tag ghcr.io/bigaston/itchci:latest codeberg.org/bigaston/itchci:latest
+      - docker push codeberg.org/bigaston/itchci:latest
+      
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
