--- a/.woodpecker/build_godot.yml
+++ b/.woodpecker/build_godot.yml
@@ -16,6 +16,8 @@ steps:
       - docker build -t ghcr.io/bigaston/godotci:${GODOT_VERSION} --build-arg VERSION=${GODOT_VERSION} --target desktop godotci
       - docker push ghcr.io/bigaston/godotci:${GODOT_VERSION}
 
+      - docker builder prune --filter until=24h --force
+
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
