--- a/.woodpecker/build_godot_android.yml
+++ b/.woodpecker/build_godot_android.yml
@@ -6,7 +6,7 @@ matrix:
   GODOT_VERSION:
     - 4.3-stable
     - 4.4.1-stable
-    - 4.5-beta7
+    - 4.5-stable
 
 steps:
   - name: Build v${GODOT_VERSION}
@@ -15,8 +15,6 @@ steps:
       - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD ghcr.io
       - docker build -t ghcr.io/bigaston/godotci:android-${GODOT_VERSION} --build-arg VERSION=${GODOT_VERSION} --target android godotci
       - docker push ghcr.io/bigaston/godotci:android-${GODOT_VERSION}
-
-      - docker system prune -a -f
 
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
